# NOI

./: .gitignore  .gitmodules  pyproject.toml
.github/workflows/: deploy.yml
code/: apply_flipped.py  apply_rotations.py  apply_transcriptions.py  artifacts.py  data.py  detect_orientation.py  review_orientation.py  transcribe.py
code/helpers/: file_converter.py  orientation.py
code/manual/: coordinates.csv  flipped.csv  rotations.csv  transcriptions.csv
data/: MCdatos.csv  data-ninas.csv  datos.csv
data/processed/: consolidated_data.csv
exhibit/: astro.config.mjs  package-lock.json  package.json
exhibit/src/components/: ArtifactMeta.astro  ObjectGrid.jsx  PostcardFlip.jsx  RouteMap.jsx  StoryViewer.jsx
exhibit/src/data/: postcards.json
exhibit/src/data/stories/: frankfurter-hof.json
exhibit/src/i18n/: ui.js  useLang.js
exhibit/src/layouts/: Layout.astro
exhibit/src/pages/: about.astro  grid.astro  index.astro  route.astro
exhibit/src/pages/detail/: [id].astro
exhibit/src/pages/story/: frankfurter-hof.astro
